[package]
name = "sophon"
version = "0.1.0"
authors = ["Takuya Fujita <tmp@users.noreply.github.com>", "mktia <19624453+mktia@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Ninja-Chain/sophon"

exclude = [
  # Those files are cosmwasm-opt artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/default-cranelift"]
singlepass = ["cosmwasm-vm/default-singlepass"]

[dependencies]
cosmwasm-std = { version = "0.11.0", default-features = false, features = ["staking"] }
cosmwasm-storage = "0.11.0"
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = "0.6"

[dev-dependencies]
cosmwasm-vm = { version = "0.11.0", default-features = false, features = ["staking"] }
cosmwasm-schema = "0.11.0"
